sandc/test/fixtures/astRegression/shouldSucceed/productions/classItem/ClassInnerClassDeclaration.sand
pub class ClassInnerClassDeclaration {
    class Inner {

    }

    pub class Inner {

    }

    abstract class Inner<T> extends Foo implements Baz, Bar<Qux> {

    }
}