sandc/test/fixtures/astRegression/shouldFail/genericMethodDeclarations/MissingParens.sand
pub class MissingParens {
    MissingParens<T> {

    }
}